--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
 			</div>
 			<div class="fluid-row">
 			
-			<p class='instruction'>This visualisation is developed based on the new passim run hence will only work for the SRT files in the new format (which includes milestones ids).  Some of the new SRT (Sira) files are available <a href='https://drive.google.com/drive/folders/1H2PFisasD_8BRVGTW_OwyRE2RdIGPbX0?usp=sharing' target='_blank'>here</a>. New SRT files for the full corpus will be available soon. The default SRT file loaded to this visualisation is Shamela0026039-ara1_JK000467-ara1. 'Choose-File' to upload an SRT file.</p>
+			<p class='instruction'>This KITAB visualisation V5 is developed based on the new passim run hence will only work for the SRT files in the new format (which includes milestones ids).  Some of the new SRT (Sira) files are available <a href='https://drive.google.com/drive/folders/1H2PFisasD_8BRVGTW_OwyRE2RdIGPbX0?usp=sharing' target='_blank'>here</a>. New SRT files for the full corpus will be available soon. The default SRT file loaded to this visualisation is Shamela0026039-ara1_JK000467-ara1. 'Choose-File' to upload an SRT file.</p>
 				<p class='instruction'>February 2019</p>
 			</div>
 			<ul class="list-group">
