--- a/views/bulksrtload.ejs
+++ b/views/bulksrtload.ejs
@@ -37,7 +37,7 @@
     </div>
     
     <div class="col-lg-6">
-        <div class='row-count'></div>
+        <div class='row-count instruction'></div>
         <div class='srt-details'>
           <p></p>
         </div>
