--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet">
 
 	<meta charset="utf-8">
 	<title>KITAB - D3 Visualisation</title>
