--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
 			</div>
 			<div class="fluid-row">
 
-				<p class='instruction'>This KITAB app can generate visualisation for V1 and V2 type of srt files.  The V1 srt files for the whole corpus are available <a href='http://dev.kitab-project.org/passim1017/target='_blank'>here.</a> 
+				<p class='instruction'>This KITAB app can generate visualisation for V1 and V2 type of srt files.  The V1 srt files for the whole corpus are available <a href='http://dev.kitab-project.org/passim1017/' target='_blank'>here.</a> 
 					The file needs to be exacted before I can  be used to generate visualisation
 					<br/>		
 					<br/> Some of the V2 SRT (Sira) files are available <a href='https://drive.google.com/drive/folders/1H2PFisasD_8BRVGTW_OwyRE2RdIGPbX0?usp=sharing' target='_blank'>here</a>.
@@ -249,40 +249,6 @@
 		</div>
 
 
-		<!--	<div class="container">
-
-		<div class="header">
-			<a href="#default" class="logo">KITAB</a>
-			<div class="header-right">
-				 <a class="active" href="#home">Home</a> 
-				<a href="#contact">Upload SRT File</a>
-				<a href="bulk-read\index.html">Bulk Compare Text Alignments</a>
-			<button onclick="window.colorMasking()">Color On/Off</button> 
-
-			</div>
-		</div>
-
-	 <div class="header">
-		<span class="logo">
-			<img src="data-file/logo-small-2.png" height="60px"/> 
-
-			
-
-		</span>
-		<span class="header-title">KITAB Text Reuse - Data Visualisation App</span>
-
-	</div> -->
-		<!-- <div class="upload-book">
-		<span>
-		Upload book button
-	</span> -->
-
-		<!--Books View Bottom Panel [START]-->
-
-
-
-		<!--Books View Bottom Panel [END]-->
-
 		<script type="text/javascript" src="javascripts/js/script.js"></script>
 		<script>
 
@@ -374,6 +340,7 @@
 				return objSelText;
 			}
 		</script>
+
 </body>
 
 </html>
