--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
 <body>
 	<div class="container">
 		<br/>
-		<div><a class="btn btn-primary" role="button" href='/bulkrenderSrt'>Color Code Alignments - SRT V2</a><br /><br /></div>
+		<div><a class="btn btn-primary" role="button" href='/bulkrenderSrt'>Color Code Alignments - V2 & Aggregated SRT</a><br /><br /></div>
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h4 class="panel-title">KITAB Data Visualisation</h4>
@@ -43,7 +43,7 @@
 					<br/> Some of the V2 SRT (Sira) files are available <a href='https://drive.google.com/drive/folders/1H2PFisasD_8BRVGTW_OwyRE2RdIGPbX0?usp=sharing' target='_blank'>here</a>.
 					The V2 SRT files for the full corpus will be available soon. The default SRT (V2) file loaded to this visualisation is
 					is Shamela0026039-ara1_JK000467-ara1. 'Choose-File' and click upload to generate the visualisation.</p>
-				<p class='instruction'>February 2019</p>
+				<p class='instruction'>May 2019</p>
 			</div>
 			<ul class="list-group">
 				<li class="list-group-item">
