passim alignement reader changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
 <body>
 	<div class="container">
 		<br/>
-		<div><a class="btn btn-primary" role="button" href='/bulkrenderSrt'>Color Code Alignments - V2 & Aggregated SRT</a><br /><br /></div>
+		<div><a class="btn btn-primary" role="button" href='/bulkrenderSrt'>Passim Alignment Reader (V2 and Aggregated)</a><br /><br /></div>
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h4 class="panel-title">KITAB Data Visualisation</h4>
