--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -374,6 +374,10 @@ text-align: right
 .panel-default>.panel-heading{
   background-color: #f0f0f5;
 }
+.heading{
+  font-size: 16px;
+  font-weight: 600;   
+}
 
  .page-number
 {
@@ -447,7 +451,8 @@ text-align: right
 
 .data-table {
   border: 0.5px solid rgb(245, 245, 245);
-  width: 100%;
+  width: 98%;
+  line-height: 1.5;
   font-size: 18px;
   margin: 4px 0;
   border-spacing: 0;
@@ -475,4 +480,102 @@ text-align: right
  
   color: #5cb85c;
   color: #39FF14
+}
+
+table#dataTable {
+  border-collapse: separate;
+  background: #fff;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  margin: 50px auto;
+  -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+#dataTable thead {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
+
+#dataTable thead th {
+  font-family: 'Amiri', Arial, Helvetica, sans-serif  ;
+  font-size: 14px;
+  font-weight: 400;
+  color: #fff;
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
+  text-align: left;
+  padding: 20px;
+  background-size: 100%;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #646f7f), color-stop(100%, #afafaf));
+  background-image: -moz-linear-gradient(#646f7f, #afafaf);
+  background-image: -webkit-linear-gradient(#646f7f, #afafaf);
+  background-image: linear-gradient(#646f7f, #afafaf);
+  border-top: 1px solid #858d99;
+}
+
+#dataTable thead th:first-child {
+  -moz-border-top-right-radius: 5px;
+  -webkit-border-top-left-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+#dataTable thead th:last-child {
+  -moz-border-top-right-radius: 5px;
+  -webkit-border-top-right-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+#dataTable tbody tr td {
+  font-family: 'Amiri', Arial, Helvetica, sans-serif  ;
+  font-weight: 400;
+  
+  font-size: 16px;
+  padding: 20px 20px 20px 20px;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+/* #dataTable tbody td:nth-child(2n) {
+  background: #f0f3f5;
+} */
+
+
+#dataTable tbody td:nth-child(2){
+ 
+  font-size: 11px;
+}
+#dataTable tbody td:nth-child(1){
+
+  font-size: 11px;
+}
+#dataTable tbody tr:last-child td {
+  border-bottom: none;
+}
+
+#dataTable tbody tr:last-child td:first-child {
+  -moz-border-bottom-right-radius: 5px;
+  -webkit-border-bottom-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+#dataTable tbody tr:last-child td:last-child {
+  -moz-border-bottom-right-radius: 5px;
+  -webkit-border-bottom-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+#dataTable tbody:hover > tr td {
+  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=50);
+  opacity: 0.5;
+}
+
+#dataTable tbody:hover > tr:hover td {
+  text-shadow: none;
+  color: #2d2d2d;
+  filter: progid: DXImageTransform.Microsoft.Alpha(enabled=false);
+  opacity: 1;
+  transition: 0.2s all;
 }
