--- a/views/bulksrtload.ejs
+++ b/views/bulksrtload.ejs
@@ -4,8 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>KITAB - D3 Visualisation</title>
+
+
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/loader.css">
+
+
 
   <script type="text/javascript" src="javascripts/vendors/d3.v4.js"></script>
   <script type="text/javascript" src="javascripts/vendors/FileSaver.js"></script>
@@ -19,41 +26,93 @@
 
 <body>
   <!-- <button onclick="window.exportCSV()">Export Back to CSV</button> -->
-  
+
 
   <!-- <label class="switch">
     <input type="checkbox" checked onclick="window.toggleMarking()">
     <span class="slider round"></span>
   </label> -->
-  <div><a class="nav-btn" href='/'>KITAB Visualisation</a></div>
+
+  <div class="fluid-row" style="margin-top: 5px"><div class="col-lg-10"><h4 class="panel-title">Passim Alignment Reader</h4></div></div>
+  <br/><br/>
+  <div class="fluid-row" class="nav"  style="border:1px solid rgb(245, 245, 245); display:block; height:60px; padding: 5px; margin-top: 5px">
+    <div class="col-lg-5">
+      <a class="btn btn-primary"  href='/'>KITAB Visualisation</a>
+      
+    </div>
+    
+   <div class="col-lg-5">
+     
+     <p class="instruction">Passim V2 (Feb 2019) alignments are available <a href="http://dev.kitab-project.org/passim01022019/" target="_blank">here;</a>
+   Passim Aggregated alignments are available <a href="http://dev.kitab-project.org/aggregated01052019" target="_blank">here</a>
+   <br/><i>Please ensure that you unzip the gz file before uploading it here.</i></p>
+   
+
+  </div>
+  </div>
+
+   <div class="fluid-row" class="nav" style=" background-color: rgb(245, 245, 245); border:1px solid rgb(245, 245, 245); display:block; height:135px; margin-top:5px;padding: 5px;">
+    <div class="col-lg-5">
+      <div style="margin-top:15px;">
+
+        <div>
+          <span class="instruction">1 - Select the version of passim output</span>
+          <br/>
+          <div style="padding-left:8px; margin-top:10px">
+          <input type="radio" id="v2" name="version" value="2">
+          <span for="v2"> V2 - Feburary 2019</span>
+          <br/>
+          <input type="radio" id="v3" name="version" value="3">
+          <span for="v3">V3 - Aggregated 2019</span>
+        </div>
+
+        <div>
+          
+        </div>
+      </div>
+
+      </div>
+    </div>
+
+    <div class="col-lg-5">
+
+      
+      <p class="instruction">2 - Click 'Import CSV/SRT' and selected the SRT file to color code the aligned passages.
+        Toggle Marking will remove the color coding</p>
+
+      <div class="instruction">
+      <button class="btn btn-primary" onclick="fileInput.click()">Import CSV/SRT</button>
+      <button  class="btn btn-primary" onclick="window.toggleMarking()">Color Coding On/Off</button>
+      <input id="fileInput" type="file" accept="text/csv" onchange="window.loadCSV(this)" style="display: none"
+        type="hidden" />
+      </div>
+        
+      
+    </div>
+
+  </div>
 
   <div class="fluid-row">
     <div class="col-lg-6">
-        <div>
-									<input type="radio" id="v2" name="version" value="2">
-									<label for="v2">V2 - January 2019</label>
-								</div>
 
-								<div>
-									<input type="radio" id="v3" name="version" value="3">
-									<label for="v3">V3 - Aggregated 2019</label>
-								</div>
-        <div><p class="instruction">Click 'Import CSV/SRT' and selected the SRT file to color code the aligned passages. Toggle Marking will remove the color coding</p></div>
-        <button onclick="fileInput.click()">Import CSV/SRT</button>
-        <button onclick="window.toggleMarking()">Toggle Marking</button>
-        <input id="fileInput" type="file" accept="text/csv" onchange="window.loadCSV(this)" hidden />
-        <table id="dataTable" class="data-table" style="display: none">
+
     </div>
-    
-    <div class="col-lg-6">
-        <div class='row-count instruction'></div>
-        <div class='srt-details'>
-          <p></p>
+
+    <div class="col-lg-12">
+      <table id="dataTable" class="data-table" style="display: none">
+
+
+        <div class="col-lg-6">
+          <div class='srt-details instruction'></div>
+         
+            <p></p>
+          
         </div>
+
+        <div class="col-lg-6"></div>
     </div>
-  </div>
- 
-  
+
+
     <tbody>
       <tr id="rowTemplate" hidden>
 
@@ -71,12 +130,17 @@
 
         <td>{{book1Name}}</td>
         <td>{{book2Name}}</td>
-        <td ><div id="book2Alignment">{{book1Content}}</div></td>
-        <td><div id="book1Alignment">{{book2Content}}</div></td>
+        <td>
+          <div id="book2Alignment">{{book1Content}}</div>
+        </td>
+        <td>
+          <div id="book1Alignment">{{book2Content}}</div>
+        </td>
       </tr>
     </tbody>
-  </table>
-  <div id="bulkLoader" class="book-content" style="display: none; margin-top: 60px">
+    </table>
+  </div>
+  <!-- <div id="bulkLoader" class="book-content" style="display: none; margin-top: 60px">
     <div id="fountainG" style="top: 40%">
       <div id="fountainG_1" class="fountainG"></div>
       <div id="fountainG_2" class="fountainG"></div>
@@ -87,27 +151,27 @@
       <div id="fountainG_7" class="fountainG"></div>
       <div id="fountainG_8" class="fountainG"></div>
     </div>
-  </div>
+  </div> -->
 
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+ 
 
   <script>
-  var Isaggregated;
+    var Isaggregated;
 
-  if (localStorage.getItem('Isaggregated') == '') {
-					localStorage.setItem('Isaggregated', 2);
-				}
-				
-				if (localStorage.getItem('Isaggregated') == 2)
-					$("#v2").prop("checked", true);
-				else
-					$("#v3").prop("checked", true);
+    if (localStorage.getItem('Isaggregated') == '') {
+      localStorage.setItem('Isaggregated', 2);
+    }
+
+    if (localStorage.getItem('Isaggregated') == 2)
+      $("#v2").prop("checked", true);
+    else
+      $("#v3").prop("checked", true);
 
 
-				$("input[name='version']").change(function () {
-					Isaggregated = $("input[name='version']:checked").val();
-					localStorage.setItem('Isaggregated', $("input[name='version']:checked").val());
-				});
+    $("input[name='version']").change(function () {
+      Isaggregated = $("input[name='version']:checked").val();
+      localStorage.setItem('Isaggregated', $("input[name='version']:checked").val());
+    });
   </script>
 </body>
 
