--- a/views/bulksrtload.ejs
+++ b/views/bulksrtload.ejs
@@ -4,60 +4,48 @@
 <head>
   <meta charset="utf-8">
   <title>KITAB - D3 Visualisation</title>
+  
+    <% include heads.ejs %>	
 
+  <script type="text/javascript" src="/javascripts/vendors/FileSaver.js"></script>
+  <script type="text/javascript" src="/javascripts/js/import-export.js"></script>
 
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-  <link rel="stylesheet" type="text/css" href="stylesheets/loader.css">
+  <script>
+    
+    $(document).ready(function () {
+      
+      var params = new URLSearchParams(window.location.search);
+      
+      pairname = params.get('fn');
+      if (pairname != null){
+      book1 = pairname.split('_')[0] + "/"
+      baseUrl = "http://dev.kitab-project.org/passim01022020/"
+      downloadURL = baseUrl + book1 + pairname;
+      
+      var initData = [];
+      var initData = '<%-JSON.stringify(csvObject)%>';
+      //console.log(initData)
+      window.loadCSVObject(initData);
+      }
 
-
-
-  <script type="text/javascript" src="javascripts/vendors/d3.v4.js"></script>
-  <script type="text/javascript" src="javascripts/vendors/FileSaver.js"></script>
-  <script type="text/javascript" src="javascripts/vendors/d3.v4.js"></script>
-  <script type="text/javascript" src="javascripts/js/process-coloring.js"></script>
-  <script type="text/javascript" src="javascripts/js/import-export.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet">
-
-
+    });
+  </script>
 </head>
 
 <body>
   <!-- <button onclick="window.exportCSV()">Export Back to CSV</button> -->
-
+  
 
   <!-- <label class="switch">
     <input type="checkbox" checked onclick="window.toggleMarking()">
     <span class="slider round"></span>
   </label> -->
-
-  <div class="fluid-row" style="margin-top: 5px">
-    <div class="col-lg-10">
-      <h4 class="panel-title">Passim Alignment Reader</h4>
-    </div>
+  <% include header.ejs %>
+    <div class="row">
+    <div class="col-md-12" style="padding-left: 30px;">
+    <h4 class="panel-title">Passim Alignment Reader</h4>
   </div>
-  <br /><br />
-  <div class="fluid-row" class="nav"
-    style="border:1px solid rgb(245, 245, 245); display:block; height:80px; padding: 5px; margin-top: 5px">
-    <div class="col-lg-5">
-      <a class="btn btn-primary" href='/'>KITAB Visualisation</a>
-
-    </div>
-
-    <div class="col-lg-5">
-
-      <p class="instruction">Passim V1 (October 2017) alignments are available <a
-        href="http://dev.kitab-project.org/passim1017/" target="_blank">here;</a> Passim V2 (Feb 2019) alignments are available <a
-          href="http://dev.kitab-project.org/passim01022019/" target="_blank">here;</a>
-        Passim Aggregated alignments are available <a href="http://dev.kitab-project.org/aggregated01052019"
-          target="_blank">here</a>
-        <br /><i>Please ensure that you unzip the gz file before uploading it here.</i></p>
-
-
-    </div>
-  </div>
+  </div>  
 
   <div class="fluid-row" class="nav"
     style=" background-color: rgb(245, 245, 245); border:1px solid rgb(245, 245, 245); display:block; height:135px; margin-top:5px;padding: 5px;">
@@ -111,6 +99,7 @@
     </div>
 
     <div class="col-lg-12">
+
       <table id="dataTable" class="data-table" style="display: none">
 
 
@@ -160,7 +149,7 @@
           </select>
         </td> -->
         <!-- ##2 END -->
-
+        
         <td>{{book1Name}}</td>
         <td>{{book2Name}}</td>
         <td>
@@ -189,6 +178,9 @@
 
 
   <script>
+
+
+
     var Isaggregated;
 
     if (localStorage.getItem('version') == '') {
@@ -206,8 +198,10 @@
     $("input[name='version']").change(function () {
       Isaggregated = $("input[name='version']:checked").val();
       localStorage.setItem('version', $("input[name='version']:checked").val());
-     // localStorage.setItem('Isaggregated', $("input[name='version']:checked").val());
+      // localStorage.setItem('Isaggregated', $("input[name='version']:checked").val());
     });
+
+
   </script>
 </body>
 
