--- a/views/bulksrtload.ejs
+++ b/views/bulksrtload.ejs
@@ -25,7 +25,7 @@
       var initData = [];
       var initData = '<%-JSON.stringify(csvObject)%>';
       //console.log(initData)
-      window.loadCSVObject(initData);
+      loadCSVObject(initData);
       }
 
     });
