--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <div class="col-md-3">
           <div class="card-counter primary">
             <i class="fa fa-database"></i>
-            <span class="count-numbers">7120</span>
+            <span class="count-numbers">7131</span>
             <span class="count-name">Books</span>
           </div>
         </div>
@@ -20,24 +20,25 @@
         <div class="col-md-3">
           <div class="card-counter danger">
             <i class="fa fa-book"></i>
-            <span class="count-numbers">490</span>
+            <span class="count-numbers">398</span>
             <span class="count-name">Annotated</span>
           </div>
         </div>
     
         <div class="col-md-3">
           <div class="card-counter success">
-            <i class="fa fa-database"></i>
-            <span class="count-numbers">20</span>
+            <i class="fa fa-spinner" aria-hidden="true"></i>
+
+            <span class="count-numbers">24</span>
             <span class="count-name">Currently In-Progress</span>
           </div>
         </div>
     
         <div class="col-md-3">
           <div class="card-counter info">
-            <i class="fa fa-users"></i>
-            <span class="count-numbers">35</span>
-            <span class="count-name">Users</span>
+            <i class="fa fa-certificate" aria-hidden="true"></i>
+            <span class="count-numbers">45</span>
+            <span class="count-name">Books Vetted</span>
           </div>
         </div>
       </div>
