--- a/views/bulksrtload.ejs
+++ b/views/bulksrtload.ejs
@@ -11,8 +11,14 @@
   <script type="text/javascript" src="/javascripts/js/import-export.js"></script>
 
   <script>
+
+    $(document).ready(function(){
+      $('#spinner').show();
+      $('#dataTable').hide()
+    });
     
-    $(document).ready(function () {
+    $(window).on('load', function(){
+    //$(window).load(function () {
       
       var params = new URLSearchParams(window.location.search);
       
@@ -27,6 +33,8 @@
       //console.log(initData)
       loadCSVObject(initData);
       }
+      $('#spinner').hide();
+      $('#dataTable').delay(3000).show()
 
     });
   </script>
@@ -60,10 +68,10 @@
             <span for="v1">V1 - October 2017 - <a href='http://dev.kitab-project.org/passim1017/' target="_blank">SRT/CSV Here</a> </span>
             <br />
             <input type="radio" id="v2" name="version" value="2">
-            <span for="v2"> V2 - Feburary 2019 - <a href='http://dev.kitab-project.org/passim01022019/' target="_blank">SRT/CSV Here</a> </span>
+            <span for="v2"> V2 - Feburary 2019 - <a href='http://dev.kitab-project.org/passim01022020/' target="_blank">SRT/CSV Here</a> </span>
             <br />
-            <input type="radio" id="v3" name="version" value="3">
-            <span for="v3">V3 - Aggregated 2019 - <a href='http://dev.kitab-project.org/aggregated01052019/' target="_blank">SRT/CSV Here</a></span>
+            <!-- <input type="radio" id="v3" name="version" value="3">
+            <span for="v3">V3 - Aggregated 2019 - <a href='http://dev.kitab-project.org/aggregated01052019/' target="_blank">SRT/CSV Here</a></span> -->
           </div>
 
           <div>
@@ -99,6 +107,10 @@
     </div>
 
     <div class="col-lg-12">
+
+      <div id="spinner" style="text-align: center;">
+        <img src="/images/spinner1.gif" width="500px" />
+      </div>
 
       <table id="dataTable" class="data-table" style="display: none">
 
